# OpenCl-Mandelbrot

./: README.md  mandelbrot.py  pyproject.toml  requirements.txt
opencl-mandelbrot/: mandelbrot.py
