[tool.poetry]
name = "opencl-mandelbrot"
version = "0.1.0"
description = "Calulates the Mandelbrot set with Python and OpenCL"
authors = ["Simon Schoelly <sischoel@gmail.com>"]
readme = "README.md"
packages = [{ include = "opencl-mandelbrot" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pillow = "^10.1.0"
pyopencl = "^2023.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mandelbrot = "opencl-mandelbrot.mandelbrot:main"
